--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <nav>
   <a href="#home">Home</a>
   <a href="#about">About</a>
-  <a href="mailto:your-email@example.com">Contact</a>
+  <a href="mailto:jollyxyverek@gmail.com">Contact</a>
 </nav>
 
 <div class="container" id="home">
@@ -96,11 +96,13 @@
     Subscribe
   </a>
 
-  <a class="btn email-btn" href="mailto:your-email@example.com">
+  <a class="btn email-btn" href="mailto:jollyxyverek@gmail.com">
     Email Me
   </a>
 </div>
 
+<a class="btn" href="https://discord.com/channels/1420039227298812090/1420039229286780980" target="_blank">Go to my Discord Channel</a>
+  
 <div class="container" id="about">
   <h2>About My Channel</h2>
   <p>Hi there! I'm a content creator who loves gaming, exploring new games, and sharing fun moments with my audience. I mainly focus on games like Minecraft and Geometry Dash, but I also experiment with different genres to keep things fresh and exciting.</p>
@@ -114,8 +116,9 @@
 </div>
 
 <div class="footer">
-  © Your Name | All rights reserved
+  © JollyB | All rights reserved
 </div>
 
 </body>
 </html>
+
