--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
     Subscribe
   </a>
 
+  <a class="btn" href="https://discord.com/channels/1420039227298812090/1420039229286780980" target="_blank">Go to Discord Channel</a>
+
   <a class="btn email-btn" href="mailto:jollyxyverek@gmail.com">
     Email Me
   </a>
 </div>
 
-<a class="btn" href="https://discord.com/channels/1420039227298812090/1420039229286780980" target="_blank">Go to my Discord Channel</a>
-  
 <div class="container" id="about">
   <h2>About My Channel</h2>
   <p>Hi there! I'm a content creator who loves gaming, exploring new games, and sharing fun moments with my audience. I mainly focus on games like Minecraft and Geometry Dash, but I also experiment with different genres to keep things fresh and exciting.</p>
@@ -121,4 +121,3 @@
 
 </body>
 </html>
-
